--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pymongo = "^3.10.1"
 beautifulsoup4 = "^4.9.1"
 Wand = "^0.6.5"
 Pillow = "^9.2.0"
+urllib3 = "^1.26.11"
 
 [build-system]
 requires = ["poetry>=0.12"]
